Added horizontal space between gravity control label and on/off buttons
change Gravity control to a pair of on/off buttons
# 0.0.12 (47614) Jan 4, 2011
Added a continuous interpolation between cartoon and real coordinates and numerical inversion of interpolation
# 0.0.11 (47576) Jan 3, 2011
Fixed: mass sliders don't snap to ticks properly
Fixed: path looks "crinkly"
Added strings for mode names, may be added into tooltips or labels
Fixed: Inconsistent icons sizes on mass sliders
Fixed: use the same cartoon scales for earth and moon so their radii are proportionately correct
Made it so the tape measure icon appears gray instead of white when disabled
rescaled control panel to fit on the stage
renamed "earth system" to "earth values"
fix: append command line args to standard main frame title, instead of replacing title (for sim-sharing)
# 0.0.10 (47428) Dec 27, 2010
12/27/10 dev version with many fixes and changes
only update camera after switching to new mode, to avoid rendering artifacts ("flash" of large body in some cases) 
simplify camera, remove animated zoom stuff
rewind to proper clock time (last time clock was paused) when Rewind button is pressed
rename RestoreProperty to ClockRewindProperty, replace restore with rewind thruout
change control panel button color for ADA compliance, and because blue-on-black is hard to see for everyone
reduce scale of control panel so that everything fits on stage
add "Physics" titled panel around Gravity check box
wire up gravity on/off to model
MessageFormat i18n (value units) for measuring tape
i18n for a couple more strings
add Gravity property and check box, not properly wired up to model
fixed look of disabled rewind button, required ugly copy of FloatingClockControlNode.StepButtonNode.getDisabledImageRescaleOpScale 
remove "Large" and "Very Large" min/max labels on mass sliders, so that we don't have i18n issues, and can use "Space Station" label