@@ -2,8 +2,6 @@
 
 package edu.colorado.phet.gravityandorbits.controlpanel;
 
-import java.awt.*;
-
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
 
@@ -19,17 +17,5 @@ public class GAORadioButton<T> extends PropertyRadioButton<T> {
         setFont( GravityAndOrbitsControlPanel.CONTROL_FONT );
         setBackground( GravityAndOrbitsControlPanel.BACKGROUND );
         setForeground( GravityAndOrbitsControlPanel.FOREGROUND );
-    }
-
-    /*
-     * Needed because aliasing looks problematic for these fonts + colors on Windows.
-     */
-    @Override
-    protected void paintComponent( Graphics g ) {
-        Graphics2D g2 = (Graphics2D) g;
-        Object originalKey = g2.getRenderingHint( RenderingHints.KEY_ANTIALIASING );
-        g2.setRenderingHint( RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON );
-        super.paintComponent( g );
-        g2.setRenderingHint( RenderingHints.KEY_ANTIALIASING, originalKey );
     }
 }
